@@ -35,7 +35,7 @@ public class SecurityConfig {
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+        return new BCryptPasswordEncoder(12);
     }
 
     @Bean
@@ -53,37 +53,51 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        http
+                // Enable CORS
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                // Disable CSRF for APIs
                 .csrf(csrf -> csrf.disable())
-                .authorizeHttpRequests(authz -> authz
-                        // Public endpoints
-                        .requestMatchers("/auth/**", "/mpesa/callback/**").permitAll()
-
-                        // Admin-only endpoints
-                        .requestMatchers("/members/register", "/members/*/suspend", "/members/*/activate")
-                        .hasRole("CHAIRPERSON")
-
-                        .requestMatchers("/loans/*/approve", "/loans/*/reject")
-                        .hasAnyRole("CHAIRPERSON", "TREASURER")
-
-                        .requestMatchers("/reports/admin/**")
-                        .hasAnyRole("CHAIRPERSON", "SECRETARY", "TREASURER")
-
-                        // Authenticated member endpoints
+                // Security headers
+                .headers(headers -> headers
+                        .httpStrictTransportSecurity(hsts -> hsts
+                                .includeSubDomains(true)
+                                .preload(true)
+                                .maxAgeInSeconds(31536000)
+                        )
+                )
+                // Authorization rules
+                .authorizeHttpRequests(auth -> auth
                         .requestMatchers(
-                                "/dashboard/**",
-                                "/contributions/**",
-                                "/loans/apply",
-                                "/loans/my/**",
-                                "/members/profile/**",
-                                "/mpesa/**",
-                                "/reports/member/**"
+                                "/api/auth/**",
+                                "/api/mpesa/callback/**",
+                                "/actuator/health",
+                                "/v3/api-docs/**",
+                                "/swagger-ui/**",
+                                "/swagger-ui.html"
+                        ).permitAll()
+                        .requestMatchers("/api/members/register", "/api/members/*/delete")
+                        .hasRole("CHAIRPERSON")
+                        .requestMatchers("/api/members/*/suspend", "/api/members/*/activate")
+                        .hasAnyRole("CHAIRPERSON", "SECRETARY", "TREASURER")
+                        .requestMatchers("/api/loans/*/approve", "/api/loans/*/reject")
+                        .hasAnyRole("CHAIRPERSON", "TREASURER")
+                        .requestMatchers("/api/reports/admin/**")
+                        .hasAnyRole("CHAIRPERSON", "SECRETARY", "TREASURER")
+                        .requestMatchers(
+                                "/api/dashboard/**",
+                                "/api/contributions/**",
+                                "/api/loans/apply",
+                                "/api/loans/my/**",
+                                "/api/members/profile/**",
+                                "/api/mpesa/**",
+                                "/api/reports/member/**"
                         ).authenticated()
-
-                        // Everything else requires authentication
                         .anyRequest().authenticated()
                 )
+                // Exception handling
                 .exceptionHandling(ex -> ex.authenticationEntryPoint(jwtAuthenticationEntryPoint))
+                // Stateless session
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
         http.authenticationProvider(authenticationProvider());
@@ -92,17 +106,31 @@ public class SecurityConfig {
         return http.build();
     }
 
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+
+        configuration.setAllowedOriginPatterns(List.of(
+                "http://localhost:4200", //angular
+                "http://localhost:3000", // React
+                "https://chama7v.com"     // Production
+        ));
+
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "Origin",
+                "X-Requested-With"
+        ));
+
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 }
